# agent-sandbox

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  E2E_DEPLOYMENT_GUIDE.md  Makefile  PR-DRAFT.md  PROJECT  README.md  RELEASE.md  Roadmap.md  api-reference.md  bundle.Dockerfile  cluster-loader.json  codegen.go  config.yaml  go.mod  go.sum  install.sh  plan.md  roadmap.md  tools.mod
.claude/: settings.local.json
clients/python/agentic-sandbox-client/: GCP.md  README.md  pyproject.toml  python-counter-template.yaml  python-counter-warmpool.yaml  python-sandbox-template.yaml  python-sandbox-warmpool.yaml  test_async_client.py  test_client.py  test_computer_use_extension.py  test_metrics.py  test_podsnapshot_client.py  test_podsnapshot_extension.py  test_request_exceptions.py  test_sandbox_client_unit.py
clients/python/agentic-sandbox-client/agentic_sandbox/: __init__.py  async_client.py  constants.py  podsnapshot.md  sandbox_client.py  sandbox_client_base.py  trace_manager.py
clients/python/agentic-sandbox-client/agentic_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clients/python/agentic-sandbox-client/agentic_sandbox/extensions/: README.md  __init__.py  computer_use.py  podsnapshot.py
clients/python/agentic-sandbox-client/agentic_sandbox/gke_extensions/: __init__.py  podsnapshot.md  podsnapshot_client.py  test_podsnapshot_client.py
clients/python/agentic-sandbox-client/gateway/: gateway-contour.yaml  run-test-kind.sh
clients/python/agentic-sandbox-client/gateway-kind/: README.md  gateway-kind.yaml  python-sandbox-template.yaml  run-test-kind.sh
clients/python/agentic-sandbox-client/k8s_agent_sandbox/: __init__.py  async_connector.py  async_k8s_helper.py  async_sandbox.py  async_sandbox_client.py  connector.py  constants.py  core_execution.py  exceptions.py  filesystem.py  k8s_helper.py  lifecycle.py  metrics.py  metrics_utils.py  models.py  pod_metadata.py  sandbox.py  sandbox_client.py  test_sandbox_client.py  trace_manager.py  utils.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/commands/: async_command_executor.py  command_execution.py  command_executor.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/core/: core_execution.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/extensions/: README.md  computer_use.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/files/: async_filesystem.py  filesystem.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/gke_extensions/: podsnapshot.md  podsnapshot_client.py  test_podsnapshot_client.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/gke_extensions/snapshots/: README.md  __init__.py  async_podsnapshot_client.py  async_sandbox_with_snapshot_support.py  async_snapshot_engine.py  async_utils.py  podsnapshot_client.py  sandbox_with_snapshot_support.py  snapshot_engine.py  utils.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/gke_extensions/snapshots/test/unit/: test_async_podsnapshot_client.py  test_async_sandbox_with_snapshot_support.py  test_async_snapshot_engine.py  test_podsnapshot_client.py  (+1 more)
clients/python/agentic-sandbox-client/k8s_agent_sandbox/test/unit/: test_async_k8s_helper.py  test_async_k8s_helper_injection.py  test_async_sandbox.py  test_async_sandboxclient.py  test_auth_normalization.py  test_bearer_token_patch.py  test_command_executor.py  test_connector.py  test_k8s_helper.py  test_k8s_helper_injection.py  test_lifecycle.py  test_lifecycle_integration.py  test_metrics.py  test_sandbox.py  test_sandbox_client.py  test_sandboxclient.py  test_tls_support.py
clients/python/agentic-sandbox-client/sandbox-router/: README.md  requirements.in  requirements.txt  sandbox_router.py  sandbox_router.yaml  test_sandbox_router.py
clients/python/agentic-sandbox-client/sandbox_router/: README.md  sandbox_router.py  sandbox_router.yaml
clients/python/langchain-agent-sandbox/: README.md  pyproject.toml
clients/python/langchain-agent-sandbox/langchain_agent_sandbox/: __init__.py  backend.py
clients/python/langchain-agent-sandbox/tests/: test_backend.py
examples/agent-sandbox-rl/: CHANGELOG.md  README.md  pyproject.toml
examples/agent-sandbox-rl/agent_sandbox_rl/: __init__.py  async_fleet.py  capacity.py  cluster.py  config.py  constants.py  exceptions.py  fleet.py  handles.py  observability.py  preflight.py  reaper.py  recycle.py  registry_rewrite.py  resources.py  sizing.py  sources.py  strategies.py
examples/agent-sandbox-rl/agent_sandbox_rl/adapters/: r2egym.py  swebench.py
examples/agent-sandbox-rl/docs/: architecture.md  design.md  gke.md  strategies.md
examples/agent-sandbox-rl/examples/: plan_capacity.py  rl_integration.md  run_swebench_fleet.py  run_swebench_recycle.py
examples/agent-sandbox-rl/performance_reports/: .gitignore  README.md  REPORT_TEMPLATE.md  deepswe_sliding_5tasks_20260621-152841.json  deepswe_sliding_5tasks_20260621-152841.txt  sliding_10tasks_20260620-232844.json  sliding_10tasks_20260620-232844.txt  sliding_10tasks_20260620-233643.json  sliding_10tasks_20260620-233643.txt
examples/agent-sandbox-rl/tests/: conftest.py  loadtest.py  run_full_swebench_benchmark.py  test_async_fleet.py  test_capacity.py  test_config.py  test_fleet.py  test_loadtest.py  test_observability.py  test_pr1232_fixes.py  test_pr1232_review2.py  test_r2egym_adapter.py  test_recycle.py  test_recycle_run_flag.py  test_registry_rewrite.py  test_resources.py  test_run_full_swebench_benchmark.py  test_session.py  test_sizing.py  test_sources.py  test_strategies.py  test_swebench.py
examples/langchain-deepagents/: README.md  main.py  pyproject.toml  run-test-kind.sh  sandbox-template.yaml
examples/langchain-deepagents/.deepagents/skills/data-analysis/: SKILL.md
examples/langchain-deepagents/.deepagents/skills/file-organizer/: SKILL.md
examples/langchain-deepagents/.deepagents/skills/python-script/: SKILL.md
examples/managed-sandbox/pod-agent/: Cargo.toml  Dockerfile  build.rs
examples/managed-sandbox/pod-agent/src/: main.rs  sandbox.rs  ssh.rs  worker.rs  worker_client.rs
(+1114 files in other folders)
